--- a/index.html
+++ b/index.html
@@ -60,12 +60,42 @@
         <!-- /.features -->
 
         <!-- Monthly Favourites -->
-        <section class="quotes">
-            <h2 class="text-uppercase">Monthly Favourites:</h2>
-            <table>
-                
-            </table>
-        </section>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Origin</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Blank</td>
+                    <td>Blank</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Blank</td>
+                    <td>Blank</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Blank</td>
+                    <td>Blank</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>Blank</td>
+                    <td>Blank</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>Blank</td>
+                    <td>Blank</td>
+                </tr>
+            </tbody>
+        </table>
         <!-- /.Monthly favourites -->
     </article>
 </body>
